@@ -3,9 +3,11 @@ package com.example.ragollama.rag.domain;
 import com.example.ragollama.rag.api.dto.StreamingResponsePart;
 import com.example.ragollama.rag.domain.generation.NoContextStrategy;
 import com.example.ragollama.rag.domain.model.RagAnswer;
+import com.example.ragollama.rag.domain.model.SourceCitation;
 import com.example.ragollama.shared.exception.GenerationException;
 import com.example.ragollama.shared.llm.LlmClient;
 import com.example.ragollama.shared.llm.ModelCapability;
+import com.example.ragollama.shared.security.PiiRedactionService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.chat.prompt.Prompt;
@@ -13,11 +15,19 @@ import org.springframework.ai.document.Document;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
+import java.util.stream.Collectors;
 
 /**
  * Сервис, отвечающий за этап генерации ответа в RAG-конвейере.
+ * <p>
+ * Эта версия формирует богатый доменный объект {@link RagAnswer}, который
+ * включает в себя не просто список имен источников, а полный, структурированный
+ * список цитат {@link SourceCitation} с текстом и метаданными.
+ * Ключевое изменение: применяется маскирование PII к фрагментам текста
+ * *перед* их возвратом (Egress Redaction).
  */
 @Slf4j
 @Service
@@ -26,6 +36,7 @@ public class GenerationService {
 
     private final LlmClient llmClient;
     private final NoContextStrategy noContextStrategy;
+    private final PiiRedactionService piiRedactionService;
 
     /**
      * Асинхронно генерирует полный ответ.
@@ -41,7 +52,7 @@ public class GenerationService {
         }
         return llmClient.callChat(prompt, ModelCapability.BALANCED)
                 .thenApply(generatedAnswer -> {
-                    List<String> sourceCitations = extractCitations(documents);
+                    List<SourceCitation> sourceCitations = extractCitations(documents);
                     return new RagAnswer(generatedAnswer, sourceCitations);
                 })
                 .exceptionally(ex -> {
@@ -83,10 +94,26 @@ public class GenerationService {
                 });
     }
 
-    private List<String> extractCitations(List<Document> documents) {
+    /**
+     * Преобразует список {@link Document} в список {@link SourceCitation},
+     * применяя маскирование PII к текстовым фрагментам.
+     *
+     * @param documents Документы, использованные в контексте.
+     * @return Список структурированных и безопасных для отображения цитат.
+     */
+    private List<SourceCitation> extractCitations(List<Document> documents) {
+        if (documents == null) {
+            return Collections.emptyList();
+        }
         return documents.stream()
-                .map(doc -> (String) doc.getMetadata().getOrDefault("source", "Unknown"))
+                .map(doc -> new SourceCitation(
+                        (String) doc.getMetadata().get("source"),
+                        piiRedactionService.redact(doc.getText()), // Egress Redaction
+                        doc.getMetadata(),
+                        (String) doc.getMetadata().get("chunkId"),
+                        (Float) doc.getMetadata().get("rerankedSimilarity")
+                ))
                 .distinct()
-                .toList();
+                .collect(Collectors.toList());
     }
 }
